:bug: fix scrolltop and whitespace + uppercase on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -303,8 +303,9 @@ code { font-family: 'Fira Code', monospace; }
 }
 
 .prompt > input {
+  flex: 1;
   background: transparent;
-  margin-left: 4px;
+  margin-left: 9px;
   border: none;
   height: 16px;
   color: #F3EFE0;
